tree-sitter/FORTRAN66/test/corpus/arithmetic_if.txt
================================================================================
FORTRAN 66 arithmetic IF
================================================================================

      REAL X
      X = -5.0
      IF (X) 10, 20, 30
   10 PRINT *, 'NEGATIVE'
      GOTO 40
   20 PRINT *, 'ZERO'
      GOTO 40
   30 PRINT *, 'POSITIVE'
   40 CONTINUE
      END

--------------------------------------------------------------------------------

(program
  (statement
    (statement_body
      (type_declaration
        (variable_list
          (variable)))))
  (statement
    (statement_body
      (assignment
        (variable)
        (expression
          (number)))))
  (statement
    (statement_body
      (if_stmt
        (expression
          (variable))
        (label)
        (label)
        (label))))
  (statement
    (label)
    (statement_body
      (print_stmt
        (expression
          (string_literal)))))
  (statement
    (statement_body
      (goto
        (label))))
  (statement
    (label)
    (statement_body
      (print_stmt
        (expression
          (string_literal)))))
  (statement
    (statement_body
      (goto
        (label))))
  (statement
    (label)
    (statement_body
      (print_stmt
        (expression
          (string_literal)))))
  (statement
    (label)
    (statement_body
      (continue_stmt)))
  (statement
    (statement_body
      (end_stmt))))
