tree-sitter/FORTRAN66/test/corpus/logical_basic.txt
================================================================================
FORTRAN 66 basic logical operations
================================================================================

A = .TRUE.
B = .FALSE.
C = A .AND. B

--------------------------------------------------------------------------------

(program
  (statement
    (statement_body
      (assignment
        (variable)
        (expression
          (logical_expr
            (logical_constant))))))
  (statement
    (statement_body
      (assignment
        (variable)
        (expression
          (logical_expr
            (logical_constant))))))
  (statement
    (statement_body
      (assignment
        (variable)
        (expression
          (logical_expr
            (logical_operation
              (expression
                (variable))
              (expression
                (variable)))))))))